js/js.translator/testData/incremental/invalidation/updateExportsAndInlineImportsWithCrossModuleInliner/lib2/l2a.1.kt
inline fun funA() = listOf(fun2()).joinToString()
